# jobinator

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  alembic.ini  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-data-ingestion/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-llm-scoring/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-materials-generation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-HUMAN-UAT.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py  script.py.mako
alembic/versions/: 1dfa4707eb26_add_generated_material_table.py  85b46b272be9_add_is_stale_to_normalized_job.py  c17823771712_add_job_score_table.py  e86913dc4de1_initial_schema.py
src/jobinator/: cli.py  db.py
src/jobinator/adapters/: __init__.py  base.py  greenhouse.py  hn_hiring.py  lever.py  wellfound.py
src/jobinator/agents/: __init__.py
src/jobinator/budget/: __init__.py  tracker.py
src/jobinator/configs/: __init__.py  settings.py
src/jobinator/generation/: __init__.py  generator.py  models.py  prompts.py  renderer.py
src/jobinator/memory/: __init__.py
src/jobinator/models/: __init__.py  budget.py  job.py  material.py  score.py
tests/: conftest.py  test_adapters.py  test_apply_cli.py  test_apply_pipeline.py  test_budget.py  test_dedup.py  test_discover.py  test_filter.py  test_generation.py  test_llm_client.py  test_models.py  test_normalize.py  test_output.py  test_renderer.py  test_score_cli.py  test_scoring.py  test_scoring_pipeline.py
tests/fixtures/: greenhouse_response.json  hn_thread.json  lever_response.json  sample_resume.json  wellfound_page.html
(+17 files in other folders)
