[project]
name = "jobinator"
version = "0.1.0"
description = "Local-first, agent-driven job search and application optimization system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "platformdirs>=4.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.9",
    "rich>=13.7",
    "sqlmodel>=0.0.21",
    "typer>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobinator"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "factory-boy>=3.3",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "ruff>=0.5",
]
