[project]
name = "jobinator"
version = "0.1.0"
description = "Local-first, agent-driven job search and application optimization system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "anthropic>=0.28",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "instructor>=1.4",
    "litellm>=1.40",
    "lxml>=6.0.2",
    "openai>=1.30",
    "platformdirs>=4.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.9",
    "rich>=13.7",
    "sqlmodel>=0.0.21",
    "tenacity>=9.1.4",
    "tiktoken>=0.7",
    "typer>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobinator"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "factory-boy>=3.3",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "respx>=0.22.0",
    "ruff>=0.5",
    "types-python-dateutil>=2.9.0.20260402",
]
